[package]
name = "read_yaml"
version = "0.1.0"
authors = ["teden3191 <42719494+teden3191@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
