[package]
name = "program2_drc"
version = "0.1.0"
authors = ["Ralph W. Crosby, PhD <crosbyrw@cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"